--- a/e-testing-front/.gitignore
+++ b/e-testing-front/.gitignore
@@ -2,7 +2,6 @@
 
 # compiled output
 /dist
-/dist-server
 /tmp
 /out-tsc
 
@@ -41,3 +40,9 @@ testem.log
 # System Files
 .DS_Store
 Thumbs.db
+
+#Angular
+/
+package-lock.json
+package.json
+mediarollRest.log
